frontend/tests/cases/negative/graded/caseLocalConstraints.gr
data Bool = True | False

foo : Bool [0] -> Bool
foo [x] = case [x] of [True] -> True; [False] -> False
